Import font family

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="main.css">
   <title>Frontend Mentor | Manage landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,6 +15,35 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <!---NAVIGATION-->
+    <nav>
+
+    </nav>
+
+    <!---SECTIONS-->
+    <section>
+      <div class="section-one left">
+        <h1>
+          Bring everyone together to build better products.   
+        </h1>
+        <p>
+          Manage makes it simple for software teams to plan day-to-day 
+          tasks while keeping the larger team goals in view.
+        </p>
+        <button>
+          Get Started
+        </button>
+      </div>
+      <div class="section-one right">
+
+      </div>
+    </section>
+    <!---FOOTER-->
+    <footer>
+
+    </footer>
+  </div>
 
   Pricing
   Product
@@ -24,12 +53,7 @@
 
   Get Started
 
-  Bring everyone together to build better products.
-
-  Manage makes it simple for software teams to plan day-to-day 
-  tasks while keeping the larger team goals in view.
-
-  Get Started
+  
 
   What’s different about Manage?
 
