Navigation mobile hamburger done

--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
         <a href="#">Community</a>
       </div>      
         <div class="nav-bg">
-          <svg xmlns="http://www.w3.org/2000/svg" width="814" height="814"><rect width="436" height="970" x="774" y="-62" fill="#FFF0EC" fill-rule="evenodd" rx="218" transform="rotate(45 718.814 -291.157)"/></svg>
+          <!--<div class="nav-bg-dt" style="display: inherit;">
+          <svg id="smanji" xmlns="http://www.w3.org/2000/svg" width="814" height="814">
+            <rect width="436" height="970" x="774" y="-62" fill="#FFF0EC" fill-rule="evenodd" rx="218" transform="rotate(45 718.814 -291.157)"/>
+          </svg>
+          </div>-->
+          <div class="nav-bg-mobile">
+            <img id="nav-bg-mobile" src="./images/bg-tablet-pattern.svg">
+
+          </div>
         <button class="nav-button">
           Get Started
         </button>
-        <div class="nav-hamburger">
+        <div class="nav-hamburger" >
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="18"><g fill="#242D52" fill-rule="evenodd"><path d="M0 0h25v4H0zM0 7h25v4H0zM0 14h25v4H0z"/></g></svg>
         </div>
       </div>
