--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       </div>
       <div class="right">         
           <ul>
-            <li> Track company-wide progress
+            <li> <h3>Track company-wide progress</h3>
                <p>See how your day-to-day tasks fit into the wider vision. Go from 
                   tracking progress at the milestone level all the way done to the 
                   smallest of details. Never lose sight of the bigger picture again.
                 </p>
             </li>       
-            <li>Advanced built-in reports
+            <li><h3>Advanced built-in reports</h3>
                  <p>Set internal delivery estimates and track progress toward company 
                   goals. Our customisable dashboard helps you build out the reports 
                   you need to keep key stakeholders informed.
                 </p>
             </li>      
-            <li>Everything you need in one place
+            <li><h3>Everything you need in one place</h3>
                   <p>Stop jumping from one service to another to communicate, store files, 
                       track tasks and share documents. Manage offers an all-in-one team 
                     productivity solution.
