Section four finished

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="section-four">
       <div class="left">
         <h1>
-          Simplify how your team<br> works today.
+          Simplify how your team works today.
         </h1>
       </div>
       <div class="right">
