--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
          
         }
       </script>
-      <div class="slider" onclick="slider()">        
+      <div class="slider">        
         <div class="slide">
         <img src="./images/avatar-anisha.png">
         <h3>Anisha Li</h3>
@@ -155,7 +155,14 @@
           from anywhere. It keeps the whole team in-sync without being intrusive.”
         </p>
         </div>
+        
 
+      </div>
+      <div class="slider-dots">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
       </div>
       <div>
         <button>Get Started</button>
