--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/tatjama">Tatjana Markovic/a>.
   </div>
 </body>
 </html>
